logs/flickerbot.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FlickerBot-0.1.dev1.dist-info'...
Listing './lib/python3.5/site-packages/flicker_admin'...
Listing './lib/python3.5/site-packages/flicker_bot'...
Listing './lib/python3.5/site-packages/flicker_bot/plugins'...
Compiling './lib/python3.5/site-packages/flicker_bot/plugins/__init__.py'...
***   File "./lib/python3.5/site-packages/flicker_bot/plugins/__init__.py", line 11
    logger.info(f"Adding plugin: {plugin}")
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flicker_bot/plugins/game.py'...
***   File "./lib/python3.5/site-packages/flicker_bot/plugins/game.py", line 29
    self.deck = [f"{c} of {suit}" for suit in self.suits for c in self.deck]
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flicker_bot/plugins/money.py'...
***   File "./lib/python3.5/site-packages/flicker_bot/plugins/money.py", line 44
    await self.client.send_message(ctx.message.channel, f"Added {amount} {self.get_cur(amount)} {self.cur_ico} "
                                                                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flicker_bot/utils'...
Compiling './lib/python3.5/site-packages/flicker_bot/utils/check.py'...
***   File "./lib/python3.5/site-packages/flicker_bot/utils/check.py", line 24
    logger.info(f'owner_checked returned {result} when checking {message.author.id} in possible owners {owners}')
                                                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flicker_bot/utils/config.py'...
***   File "./lib/python3.5/site-packages/flicker_bot/utils/config.py", line 87
    raise ValueError(f"Unknown keyword args: {', '.join([key for key in kwargs.keys()])}")
                                                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flicker_bot/utils/plugins.py'...
***   File "./lib/python3.5/site-packages/flicker_bot/utils/plugins.py", line 29
    logger.info(f"Updated currency for user {userid} {username}, operation {operation}, amount {amount}")
                                                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flicker_utils'...
Compiling './lib/python3.5/site-packages/flicker_utils/config.py'...
***   File "./lib/python3.5/site-packages/flicker_utils/config.py", line 14
    self.engine = sqlalchemy.create_engine(f'sqlite:///{database_url}', echo=True)
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flicker_utils/sql_app.py'...
***   File "./lib/python3.5/site-packages/flicker_utils/sql_app.py", line 36
    return f"<User(name={self.username}-{self.userid}, amount={self.amount})>"
                                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
